updated code of conduct, theme color, logo changed

--- a/about-me.html
+++ b/about-me.html
@@ -38,7 +38,7 @@
                                 <!-- RD Navbar Toggle-->
                                 <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" /></a>
+                                <a class="rd-navbar-brand" href="index.html"><img src="images/tpc-logo.png" alt="" width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
                                 <div class="rd-navbar-nav-wrap" id="rd-navbar-nav-wrap-1">
@@ -471,7 +471,7 @@
         </footer>
     </div>
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
