--- a/our-alumni.html
+++ b/our-alumni.html
@@ -46,7 +46,7 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logo-default-190x37.png"
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png"
                                         alt="" width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
@@ -68,8 +68,8 @@
                                                           href="testimonials.html">Testimonials</a></li>
                                               </ul>
                                           </li> -->
-                                          <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
-                                          </li>
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
+                                        </li>
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="code-of-conduct.html">Code
                                                 of
                                                 Conduct</a>
@@ -239,19 +239,21 @@
                 <div class="row row-50 justify-content-center justify-content-lg-between">
                     <div class="col-md-10 col-lg-6 col-xl-5">
                         <h3 class="wow-outer"><span class="wow slideInDown">Who We Are</span></h3>
-                        <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".05s">The Alumni Association
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">The Alumni
+                                Association
                                 of Chandigarh College of Engineering and Technology (AACCET), is a sub-faction of
                                 Training and Placement Cell (TPC) of CCET that offers a platform to unite together the
                                 college graduates amongst each other as well as establish a professional relation of
                                 college students with their Alumni.</span></p>
-                        <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".1s">AACCET acts as an active
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">AACCET acts
+                                as an active
                                 body maintained by Alumni Executives of Training and Placements Cell along with
                                 Executive Alumni members of AACCET to provide a platform where students can interact,
                                 seek professional guidance and learn about various carrier opportunities. AACCET
                                 interact with college Alumni and work together to bring carrier opportunities to
                                 students’ doorsteps in the form of campus placements, industrial trainings and
                                 internships.</span></p>
-                        <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".15s">
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".15s">
                                 AACCET also plays vital role in organizing various interactive workshops and seminars to
                                 bring
                                 information and knowledge of corporate world from Alumni’s experience to the students in
@@ -960,61 +962,64 @@
             </div>
         </section>
 
-        <div class="container section alumniForm">
-            <div class="row">
-                <div class="col-12">
-                    <form method="post" autocomplete="off" name="connect-us-form">
-                        <h2 class="text-center">Connect With Us</h2>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="first_name">First Name</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="First Name"
-                                    required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="last_name">Last Name</label>
-                                <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name"
-                                    required>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="first_name">Graduation Year</label>
-                                <input type="text" class="form-control" id="grad" name="grad" placeholder="Graduation"
-                                    required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="last_name">Current Occupation</label>
-                                <input type="text" class="form-control" id="occ" name="occ" placeholder="Occupation"
-                                    required>
-                            </div>
-                            <!--                        <div class="form-group col-md-6">
+        <section class="section section-lg bg-gray-100">
+            <div class="container">
+                <h3 class="text-center mb-4">Connect With Us</h3>
+                <div class="alumniForm">
+                    <div class="row">
+                        <div class="col-12">
+                            <form method="post" autocomplete="off" name="connect-us-form">
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="first_name">First Name</label>
+                                        <input type="text" class="form-control" id="name" name="name"
+                                            placeholder="First Name" required>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="last_name">Last Name</label>
+                                        <input type="text" class="form-control" id="lname" name="lname"
+                                            placeholder="Last Name" required>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="first_name">Graduation Year</label>
+                                        <input type="text" class="form-control" id="grad" name="grad"
+                                            placeholder="Graduation" required>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="last_name">Current Occupation</label>
+                                        <input type="text" class="form-control" id="occ" name="occ"
+                                            placeholder="Occupation" required>
+                                    </div>
+                                    <!--                        <div class="form-group col-md-6">
                             <label for="last_name">SALARY</label>
                             <input type="text" class="form-control" id="sal" name="sal" placeholder="SALARY(OPTIONAL)">
                           </div> -->
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Email"
-                                    required>
-                            </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="email">Email</label>
+                                        <input type="email" class="form-control" id="email" name="email"
+                                            placeholder="Email" required>
+                                    </div>
 
-                            <div class="form-group col-md-6">
-                                <label for="phone">Contact Number</label>
-                                <input type="tel" class="form-control" id="phone" name="phone"
-                                    placeholder="Phone Number" required>
-                            </div>
-                            <div class="form-group col-md-12" style="text-align: center;">
-                                <button type="submit" id="alumniFormBtn" name="submit" value="Login"
-                                    class="btn">Submit</button>
-                            </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="phone">Contact Number</label>
+                                        <input type="tel" class="form-control" id="phone" name="phone"
+                                            placeholder="Phone Number" required>
+                                    </div>
+                                    <div class="form-group col-md-12" style="text-align: center;">
+                                        <button type="submit" id="alumniFormBtn" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
+                            <!-- <div id="output"></div> -->
                         </div>
-                    </form>
-                    <!-- <div id="output"></div> -->
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- Page Footer-->
         <footer class="section footer-linked bg-secondary-dark">
@@ -1099,8 +1104,9 @@
             </div>
         </footer>
     </div>
+    
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
