--- a/past-placements.html
+++ b/past-placements.html
@@ -50,7 +50,7 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logo-default-190x37.png"
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png"
                                         alt="" width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
@@ -72,8 +72,8 @@
                                                           href="testimonials.html">Testimonials</a></li>
                                               </ul>
                                           </li> -->
-                                          <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
-                                          </li>  
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
+                                        </li>
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="code-of-conduct.html">Code
                                                 of
                                                 Conduct</a>
@@ -253,15 +253,16 @@
             <div class="row row-50 justify-content-center justify-content-lg-between">
                 <div class="col-md-10 col-lg-6">
                     <p class="wow-outer">
-                        <span class="wow slideInDown" data-wow-delay=".05s">Moment of truth when we
+                        <span class="wow slideInDown text-justify" data-wow-delay=".05s">Moment of truth is when we
                             accept every opportunity as a learning curve in life!!!</span><br>
-                        <span class="wow slideInDown" data-wow-delay=".1s">The Placement organization succour us to fly
+                        <span class="wow slideInDown text-justify" data-wow-delay=".1s">The Placement organization
+                            succour us to fly
                             in the vast sky of
                             corporate world with golden colour and it is really pushing it’s best to edify the student
                             community and it act as a bridge to consummate the gap between the stringent competition in
                             the industry and talent available in the college. The Placement organization believes in
                             propelling thought that ....</span><br>
-                        <span class="wow slideInDown" data-wow-delay=".15s">Go
+                        <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go
                             confidently in the direction of your dreams!!!</span>
                     </p>
 
@@ -873,7 +874,7 @@
 
 
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
