--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -50,8 +50,8 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logo-default-190x37.png"
-                                        alt="" width="190" height="37" /></a>
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png" alt=""
+                                        width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
                                 <div class="rd-navbar-nav-wrap">
@@ -72,8 +72,8 @@
                                                           href="testimonials.html">Testimonials</a></li>
                                               </ul>
                                           </li> -->
-                                          <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
-                                          </li>
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
+                                        </li>
                                         <li class="rd-nav-item active"><a class="rd-nav-link"
                                                 href="code-of-conduct.html">Code
                                                 of
@@ -228,49 +228,91 @@
         <div class="container">
             <div class="row row-50 justify-content-center">
                 <div class="col-md-10 col-lg-11">
-                    <p class="wow-outer">
-                        <span class="wow slideInDown" data-wow-delay=".05s">Training and Placements Cell code of conduct
-                            specifies important guidelines that are supposed to be adhere by the students of final year
-                            participating in placement drives conducted by TPC.
-                        </span>
-                    </p>
-                    <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".1s">All the students
-                            participating in placement
-                            drives are supposed to
-                            go through the code of conduct before applying for any campus placement.
-                        </span></p>
-                    <p class="wow-outer0"><span class="wow slideInDown" data-wow-delay=".15s"> Any kind of failure by
-                            any student in
-                            compliance of any guideline of code of conduct will lead to immediate implementation of
-                            action as mentioned in the code of conduct.</span>
-                    </p>
+                    <blockquote class="quote-light">
+                        <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px" viewbox="0 0 35 25">
+                            <path
+                                d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                            </path>
+                        </svg>
+                        <div class="quote-light-text">
+                            <p class="wow-outer">
+                                <span class="wow slideInDown" data-wow-delay=".05s">Training and Placements Cell code of
+                                    conduct
+                                    specifies important guidelines that are supposed to be adhere by the students of
+                                    final year
+                                    participating in placement drives conducted by TPC. All the students participating
+                                    in
+                                    placement drives are supposed to go through the code of conduct before applying for
+                                    any
+                                    campus placement. Any kind of failure by any student in compliance of any guideline
+                                    of code
+                                    of conduct will lead to immediate implementation of action as mentioned in the code
+                                    of
+                                    conduct.</span>
+                            </p>
+                        </div>
+                    </blockquote>
                 </div>
             </div>
         </div>
-        <div class="info-container mt-5">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/TPC code of conduct 2021.pdf" height="100%"
-                        width="100%"></iframe>
+
+        <section class="section section-lg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h6>Documents</h6>
+                        <!-- Bootstrap tabs -->
+                        <div class="tabs-custom tabs-horizontal tabs-line" id="tabs-1">
+                            <!-- Nav tabs-->
+                            <ul class="nav nav-tabs">
+                                <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-1-1"
+                                        data-toggle="tab">Code of Conduct</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2"
+                                        data-toggle="tab">Declaration</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
+                                        data-toggle="tab">CV Format</a></li>
+                            </ul>
+                            <!-- Tab panes-->
+                            <div class="tab-content">
+                                <div class="tab-pane fade show active" id="tabs-1-1">
+                                    <div class="info-container mt-5">
+                                        <div class="col-md-10">
+                                            <div class="embed-responsive embed-responsive-4by3">
+                                                <iframe src="images/pdf/TPC code of conduct 2021.pdf" height="100%"
+                                                    width="100%"></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="tab-pane fade" id="tabs-1-2">
+                                    <div class="info-container mt-2">
+                                        <div class="col-md-10">
+                                            <div class="embed-responsive embed-responsive-4by3">
+                                                <iframe src="images/pdf/Declaration.pdf" height="100%"
+                                                    width="100%"></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="tab-pane fade" id="tabs-1-3">
+                                    <div class="info-container mt-2 mb-2">
+                                        <div class="col-md-10">
+                                            <div class="embed-responsive embed-responsive-4by3">
+                                                <iframe src="images/pdf/cvFormat.pdf" height="100%"
+                                                    width="100%"></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="info-container mt-2">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/Declaration.pdf" height="100%"
-                        width="100%"></iframe>
-                </div>
-            </div>
-        </div>
-        <div class="info-container mt-2 mb-2">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/cvFormat.pdf" height="100%"
-                        width="100%"></iframe>
-                </div>
-            </div>
-        </div>
+        </section>
+
         <footer class="section footer-linked bg-secondary-dark">
             <div class="footer-linked-main">
                 <div class="container">
@@ -379,7 +421,7 @@
     </div>
 
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
