--- a/coming-soon.html
+++ b/coming-soon.html
@@ -68,7 +68,7 @@
         </section>
     </div>
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
