--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                         data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                     <!-- RD Navbar Brand-->
                                     <a class="rd-navbar-brand" href="index.html"> <img
-                                            src="images/logo-default-190x37.png" alt="" width="190" height="37" /></a>
+                                            src="images/tpc-logo.png" alt="" width="190" height="37" /></a>
                                 </div>
                                 <div class="rd-navbar-main-element">
                                     <div class="rd-navbar-nav-wrap">
@@ -306,13 +306,13 @@
                 <div class="row row-50 justify-content-center justify-content-lg-between">
                     <div class="col-md-10 col-lg-6 col-xl-5">
                         <h3 class="wow-outer"><span class="wow slideInDown">Invitation</span></h3>
-                        <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".05s">
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">
                                 We cordially invite your esteemed organization to participate in our campus placement
                                 program starting June 2023 to consider students graduating in May 2024. The College
                                 offers 4-years BE degree Programs in Civil Engineering, Mechanical Engineering, Computer
                                 Science and Engineering, Electronics and Communication Engineering Streams.
                             </span></p>
-                        <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".1s">The
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">The
                                 Institute has consistently produced outstanding Engineers who have excelled in their
                                 career and occupied responsible position in some of the best known enterprises in India
                                 as well as across the globe. We have been successful in maintaining our high placement
@@ -662,7 +662,7 @@
         </footer>
     </div>
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/logo-default-190x37.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
