--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -236,7 +236,7 @@
                         </svg>
                         <div class="quote-light-text">
                             <p class="wow-outer">
-                                <span class="wow slideInDown" data-wow-delay=".05s">Training and Placements Cell code of
+                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">Training and Placements Cell code of
                                     conduct
                                     specifies important guidelines that are supposed to be adhere by the students of
                                     final year
