--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -227,7 +227,7 @@
         </section>
         <div class="container">
             <div class="row row-50 justify-content-center">
-                <div class="col-md-10 col-lg-11">
+                <div class="col-lg-11">
                     <blockquote class="quote-light">
                         <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px" viewbox="0 0 35 25">
                             <path
