--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                                     <button class="rd-navbar-toggle"
                                         data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                     <!-- RD Navbar Brand-->
-                                    <a class="rd-navbar-brand" href="index.html"> <img
-                                            src="images/tpc-logo.png" alt="" width="190" height="37" /></a>
+                                    <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png" alt=""
+                                            width="190" height="37" /></a>
                                 </div>
                                 <div class="rd-navbar-main-element">
                                     <div class="rd-navbar-nav-wrap">
@@ -221,7 +221,7 @@
                                         college.</span></p>
                                 <div class="wow-outer button-outer"><a
                                         class="button button-lg button-primary button-winona wow slideInDown"
-                                        href="donate.html" data-wow-delay=".4s">Contact Now</a></div>
+                                        href="contact-us.html" data-wow-delay=".4s">Contact Now</a></div>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                                 to fix a mutually convenient date for your visit to our campus.</span></p>
                         <div class="wow-outer button-outer"><a
                                 class="button button-lg button-primary button-winona wow slideInDown"
-                                data-wow-delay=".1s" href="about-us.html">Learn more</a></div>
+                                data-wow-delay=".1s" href="past-placements.html">Learn more</a></div>
                     </div>
                     <!-- <div class="col-md-10 col-lg-6 wow-outer"><img class="img-responsive wow slideInRight"
                             src="images/large-features-2-570x368.jpg" alt="" width="570" height="368" />
@@ -332,11 +332,11 @@
                                 <iframe width="570" height="320" src="https://www.youtube.com/embed/nsk9KqPy-hE"
                                     allowfullscreen=""></iframe>
                             </div>
-                            <div class="thumbnail-video__overlay video-overlay"
-                                style="background-image: url(images/invitation_video_cover.jpg)">
+                            <!-- <div class="thumbnail-video__overlay video-overlay"
+                                style="background-image: url(images/)">
                                 <div class="button-video"></div>
                                 <h5>A Glimpse of CCET (Training and Placement Cell)</h5>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -371,11 +371,17 @@
                             </div>
                             <div class="profile-modern-item">
                                 <div class="group group-xs group-middle">
-                                    <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a>
+                                    <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a>
                                     <a class="icon icon-sm icon-creative mdi mdi-twitter" href="#"></a>
                                     <a class="icon icon-sm icon-creative mdi mdi-instagram" href="#"></a>
-                                    <a class="icon icon-sm icon-creative mdi mdi-google" href="#"></a>
-                                    <a class="icon icon-sm icon-creative mdi mdi-linkedin" href="#"></a>
+                                    <a class="icon icon-sm icon-creative mdi mdi-google" href="#"></a> -->
+                                    <a class="icon icon-sm icon-creative mdi mdi-linkedin"
+                                        href="https://www.linkedin.com/in/dr-k-g-sharma-5b765a1a/"></a>
+                                    <!-- email icon -->
+                                    <a class="icon icon-sm icon-creative mdi mdi-email"
+                                        href="mailto:tpo@ccet.ac.in"></a>
+                                    <!-- phone icon -->
+                                    <a class="icon icon-sm icon-creative mdi mdi-phone" href="tel:+91-94144-03565"></a>
                                 </div>
                             </div>
                         </div>
