--- a/past-placements.html
+++ b/past-placements.html
@@ -50,8 +50,8 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png"
-                                        alt="" width="190" height="37" /></a>
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png" alt=""
+                                        width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
                                 <div class="rd-navbar-nav-wrap">
@@ -251,25 +251,40 @@
         </div> -->
         <div class="container">
             <div class="row row-50 justify-content-center justify-content-lg-between">
-                <div class="col-md-10 col-lg-6">
-                    <p class="wow-outer">
-                        <span class="wow slideInDown text-justify" data-wow-delay=".05s">Moment of truth is when we
-                            accept every opportunity as a learning curve in life!!!</span><br>
-                        <span class="wow slideInDown text-justify" data-wow-delay=".1s">The Placement organization
-                            succour us to fly
-                            in the vast sky of
-                            corporate world with golden colour and it is really pushing it’s best to edify the student
-                            community and it act as a bridge to consummate the gap between the stringent competition in
-                            the industry and talent available in the college. The Placement organization believes in
-                            propelling thought that ....</span><br>
-                        <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go
-                            confidently in the direction of your dreams!!!</span>
-                    </p>
+                <div class="col-lg-11">
+
+                    <blockquote class="quote-light">
+                        <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px" viewbox="0 0 35 25">
+                            <path
+                                d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                            </path>
+                        </svg>
+                        <div class="quote-light-text">
+                            <p class="wow-outer">
+                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">Moment of truth is when
+                                    we
+                                    accept every opportunity as a learning curve in life!!!</span><br>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".1s">The Placement
+                                    organization
+                                    succour us to fly
+                                    in the vast sky of
+                                    corporate world with golden colour and it is really pushing it’s best to edify the
+                                    student
+                                    community and it act as a bridge to consummate the gap between the stringent
+                                    competition in
+                                    the industry and talent available in the college. The Placement organization
+                                    believes in
+                                    propelling thought that ....</span><br>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go
+                                    confidently in the direction of your dreams!!!</span>
+                            </p>
+                        </div>
+                    </blockquote>
 
                 </div>
-                <div id="alumniIntro" class="col-md-10 col-lg-5"><img class="img-responsive"
+                <!-- <div id="alumniIntro" class="col-md-10 col-lg-5"><img class="img-responsive"
                         src="images/services-1-570x368.jpg" alt="" width="570" height="368" />
-                </div>
+                </div> -->
             </div>
         </div>
 
