added all testimonials and logo changed

--- a/our-alumni.html
+++ b/our-alumni.html
@@ -326,25 +326,9 @@
                                     </path>
                                 </svg>
                                 <div class="quote-light-text">
-                                    <p>An education that prioritizes the student, a faculty that fosters g
-                                        testimonial-rowth, and
-                                        a wealth of
-                                        opportunities - that is what I received from my college. From a timid teenager
-                                        to a poised
-                                        professional, I owe my transformation to the comprehensive experience that was
-                                        provided to
-                                        me. The rigors of the academic curriculum, in conjunction with a plethora of
-                                        extracurricular
-                                        activities, equipped me with the necessary skills and confidence to excel in the
-                                        professional world.
-
-                                        The professors in my department were more than educators, they were mentors and
-                                        champions of
-                                        our success. I am deeply grateful for their unwavering support and expert
-                                        guidance. It is
-                                        with great pride that I claim CCET as my alma mater and highly recommend it to
-                                        anyone
-                                        seeking a well-rounded, enriching education.</p>
+                                    <p>An education that prioritizes the student, a faculty that fosters growth, and a wealth of opportunities - that is what I received from my college. From a timid teenager to a poised professional, I owe my transformation to the comprehensive experience that was provided to me. The rigors of the academic curriculum, in conjunction with a plethora of extracurricular activities, equipped me with the necessary skills and confidence to excel in the professional world.    <br>                                   
+The professors in my department were more than educators, they were mentors and champions of our success. I am deeply grateful for their unwavering support and expert guidance. It is with great pride that I claim CCET as my alma mater and highly recommend it to anyone seeking a well-rounded, enriching education.
+                                        </p>
                                 </div>
                                 <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-the-oldbrand-83x64.png" alt="" width="83" height="64" />
@@ -563,9 +547,8 @@
                         <div class="item">
                             <!-- Quote Light 3-->
                             <blockquote class="quote-light">
-                                <cite class="quote-light-cite">Kohima Goyal</cite>
-                                <p class="quote-light-caption">Master Student in Public Policy , National University
-                                    Singapore</p>
+                                <cite class="quote-light-cite">Prateek Bhatt</cite>
+                                <p class="quote-light-caption">Godrej and Boyce</p>
                                 <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
                                     viewbox="0 0 35 25">
                                     <path
@@ -573,9 +556,150 @@
                                     </path>
                                 </svg>
                                 <div class="quote-light-text">
-                                    <p>TPC played an important role and helped bring nice organizations on campus for
-                                        training
-                                        and placements.</p>
+                                    <p>TMy experience with TPC was very good. They were very supportive and helpful throughout the placement process and I was able to get 2 job offers at Godrej and Edurev. TPC organised the placement drives very well both in our own campus and other colleges as well and were available for any assistance.
+                                    </p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Arshdeep Kaur</cite>
+                                <p class="quote-light-caption">iCuerious Research Services LLP</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>Thank you all my professors and batchmates for being so helpful supportive and friendly throughout my placement. The things that I have learnt from them will be invaluable to my future placements and career.I also would like to specially thank the placement department for guiding and providing me a good platform for my career and also helped me to get as my first job in iCuerious Research Services LLP</p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Akshay Sindhu</cite>
+                                <p class="quote-light-caption">Dr. Reddy's Laboratories Ltd.</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>My journey through CCET was pivotal in terms of providing me opportunities to learn and apply, which prepared me for my path ahead for management education and the corporate world. The ample amount of avenues, academic as well as extra curricular groomed me into a better individual by providing opportunities to groom and hone my talents in the college.</p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Harsh Bhatnagar</cite>
+                                <p class="quote-light-caption">Student at University of British Columbia, Vancouver </p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>CCET has provided me great friends and colleagues who are like a family to me. Professors have helped me to grow and align my future goals. Special thanks to Sakib Sir in civil engineering department for the guidance and showing me the way to turn my degree into a progressive one.😇</p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Akash Kumar</cite>
+                                <p class="quote-light-caption">Master Student at Indian Institute of Management (IIM), Lucknow</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>As an alumnus of CCET, I am honored to share my experience at this institution. I can confidently say that my time at CCET was nothing short of exceptional. The college provided a stimulating and conducive environment that helped me develop not only my technical skills but also my interpersonal and communication skills. Moreover, the college's extracurricular activities enabled me to hone my leadership, teamwork, and time management skills. The campus was vibrant, with numerous student clubs and organizations that provided opportunities for me to pursue my interests and passions. The skills and knowledge I acquired at the college proved to be invaluable in my career, and I will always be grateful for the foundation that CCET provided me. I am also thankful to TPC, CCET for helping me in getting my first corporate experience at Infosys which really helped me in creating powerful and inspiring story of reaching where I am today. Today, I am pursuing my MBA from prestigious and world renowned institute that is IIM Lucknow, and I can say with confidence that CCET played a significant role in shaping my academic and professional journey. I am proud to be an alumnus of this institution. <br>
+                                        Sincerely,
+                                        <br>
+                                        Akash Kumar <br>
+                                        Master Student at Indian Institute of Management (IIM), Lucknow <br>
+                                        Former Senior Systems Engineer at Infosys Ltd.
+                                        </p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Niti Gupta</cite>
+                                <p class="quote-light-caption">Microsoft</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>I am delighted to provide a testimonial for my college experience. My time at CCET was truly transformative, and I could not be more grateful for the opportunities and education that I received. <br>
+From the moment I arrived on campus, I felt welcomed and supported by the faculty, staff, and students. The community at CCET is unlike any other, and I quickly formed lifelong friendships with my peers. The professors were not only experts in their fields but also passionate about teaching and mentoring students. <br>
+One of the highlights of my college experience was the experiential learning opportunities that were available to me. Through internships, research projects, and amazing extra-curricular activity clubs, I was able to apply what I was learning in the classroom to real-world situations. These experiences helped me to develop valuable skills and knowledge that will serve me well in my future career. <br>
+Overall, my time at CCET exceeded my expectations in every way. I am confident that the education and experiences I gained there will continue to shape my life in meaningful ways for years to come. I would highly recommend CCET to anyone looking for a top-notch education in a supportive and enriching environment.</p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Anmol Chandel</cite>
+                                <p class="quote-light-caption">Macquarie University(Current) /Block8</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>I am delighted to share my experience with the Training and Placement Cell (TPC) and the organization as a whole, which has been instrumental in helping me attain my academic and career goals. The support and guidance I received from TPC were invaluable in securing a job at Block8, which provided me with the much-needed confidence and knowledge to grow professionally.</p>
+                                </div>
+                                <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Anmol Thakur</cite>
+                                <p class="quote-light-caption">EY</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>Training and Placement Cell (TPC) have been instrumental in acting as a bridge between recruiters and college campus. TPC provided me with an interesting opportunity to work with people from diverse background striving for a common goal. I am thankful to respected teachers, staff and teammates for their valuable contribution, their guidance and support have helped me alot personally and professionally.</p>
                                 </div>
                                 <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
